# Capstone-Project

./: .gitignore  README.md  alembic.ini  main.py  pyproject.toml  vacation.db
controllers/: auth.py  itinerary.py  trip.py  user_routes.py
core/: auth.py  config.py  db.py  deps.py  prompts.py
migrations/: env.py
migrations/versions/: 5f13497f4474_change_from_username_to_email.py  e7681a94b5d6_initial_migration.py  f1c92b4ec5c2_change_from_username_to_email.py
models/: __init__.py  itinerary.py  trip.py  user.py  user_trip.py
schemas/: itinerary.py  trips.py  user.py
services/: auth.py  itinerary_service.py  trip_service.py  user_service.py
